Fix invisible Register/Back to Login buttons on iOS

--- a/css/index.css
+++ b/css/index.css
@@ -65,4 +65,5 @@ body h1{
     background-color: transparent;
     font-size: 14px;
     cursor: pointer;
+    color: black;
 }
